force-app/main/default/objects/Amendment_Team__c/Amendment_Team__c.object-meta.xml
<CustomObject>
    <description>Amendment Team object contains all the sales user who has permission to amend Closed Opportunity.</description>
    <label>Amendment Team</label>
    <nameField>
        <displayFormat>AT# {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>