force-app/main/default/objects/Amendment_Team__c/fields/Amendment_Team_Description__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Team_Description__c</fullName>
    <description>Description of Amendment Team</description>
    <label>Amendment Team Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>