force-app/main/default/objects/Amendment_Team__c/fields/Amendment_Team_Description_Link__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Team_Description_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Amendment_Team_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Team Description Link</label>
    <type>Text</type>
</CustomField>