force-app/main/default/objects/Amendment_Team__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicable for Event Series.</description>
    <label>Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Amendment Team</relationshipLabel>
    <relationshipName>Amendment_Team</relationshipName>
    <type>Lookup</type>
</CustomField>