force-app/main/default/objects/Amendment_Team__c/listViews/Amendment_Team_by_Event.listView-meta.xml
<ListView>
    <fullName>Amendment_Team_by_Event</fullName>
    <columns>NAME</columns>
    <columns>Series__c</columns>
    <columns>Amendment_Team_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Amendment Team by Event</label>
    <language>en_US</language>
</ListView>